--- a/backend/.env
+++ b/backend/.env
@@ -5,6 +5,6 @@ JWT_SECRET=mysecretkey
 NODE_ENV=development
 
 
-CLOUDINARY_CLOUD_NAME=ddoybecun
-CLOUDINARY_API_KEY=	849786266483274
-CLOUDINARY_API_SECRET=MOZSS3ehbyeI9ReNU5nCxA4tToE
+CLOUDINARY_CLOUD_NAME=Your_cloudinary_Cloud_Name
+CLOUDINARY_API_KEY=	Your_cloudinary_API_Key
+CLOUDINARY_API_SECRET=Your_API_Secret
