Fixing git index lock issue

--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@ yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
-
+node_modules/
 
 dist
 dist-ssr
@@ -19,8 +19,8 @@ dist-ssr
 .DS_Store
 *.suo
 *.ntvs*
-*.njsprojg
+*.njsproj
 *.sln
 *.sw?
+
 .env
-backend/.env
