--- a/backend/package.json
+++ b/backend/package.json
@@ -4,8 +4,10 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "dev": "nodemon src/index.js",
-    "start": "node src/index.js"
+    "dev": "nodemon src/index.js",  // Used for local development
+    "start": "node src/index.js",   // Default start command for serverless or production deployment
+    "vercel-build": "npm run build",  // Optional for Vercel if you need a specific build step for serverless
+    "build": "echo 'No build step required for backend'"  // For Vercel to skip unnecessary build steps
   },
   "keywords": [],
   "author": "",
