--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -1,13 +1,10 @@
 {
-  "name": "frontend",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "vite build && gh-pages -d dist"
   },
   "dependencies": {
     "axios": "^1.8.3",
@@ -35,5 +32,6 @@
     "postcss": "^8.5.3",
     "tailwindcss": "^3.4.17",
     "vite": "^5.4.10"
-  }
+  },
+  "homepage": "https://withyoutanvir.github.io/SocialSphere"
 }
